--- a/index.html
+++ b/index.html
@@ -37,23 +37,47 @@
         <button id="underline" class="option-button-format">
           <i class="fa-sharp fa-solid fa-underline"></i>
         </button>
+
+        <!-- listingButtons -->
+
+        <button id="insertOrderedList" class="option-button">
+          <div class="fa-sharp fa-solid fa-list-ol"></div>
+        </button>
+
+        <button id="insertUnOrderedList" class="option-button">
+          <div class="fa-sharp fa-solid fa-list-ul"></div>
+        </button>
+
+        <!-- undoButton -->
+
+        <button id="undo" class="option-button">
+          <i class="fa-sharp fa-solid fa-rotate-left"></i>
+        </button>
+
+        <!-- linkButton -->
+
+        <button id="createLink" class="adv-option-button">
+          <i class="fa-sharp fa-solid fa-link"></i>
+        </button>
+
+        <button id="unlink" class="adv-option-button">
+          <i class="fa-sharp fa-solid fa-link-slash"></i>
+        </button>
+
+        <!-- allignmentOptions -->
+
+        <button id="justifyLeft" class="option-button-align">
+          <i class="fa-sharp fa-solid fa-align-left"></i>
+        </button>
+
+        <button id="justifyRight" class="option-button-align">
+          <i class="fa-sharp fa-solid fa-align-right"></i>
+        </button>
+
+        <button id="justifyCenter" class="option-button-align">
+          <i class="fa-solid fa-align-center"></i>
+        </button>
       </div>
-
-      <!-- listingButtons -->
-
-      <button id="insertOrderedList" class="option-button">
-        <div class="fa-sharp fa-solid fa-list-ol"></div>
-      </button>
-
-      <button id="insertUnOrderedList" class="option-button">
-        <div class="fa-sharp fa-solid fa-list-ul"></div>
-      </button>
-
-      <!-- undoButton -->
-
-      <button id="undo" class="option-button">
-        <i class="fa-sharp fa-solid fa-rotate-left"></i>
-      </button>
     </div>
     <script src="index.js"></script>
   </body>
