--- a/index.html
+++ b/index.html
@@ -77,7 +77,41 @@
         <button id="justifyCenter" class="option-button-align">
           <i class="fa-solid fa-align-center"></i>
         </button>
+
+        <button id="justifyFull" class="option-button-align">
+          <i class="fa-sharp fa-solid fa-align-justify"></i>
+        </button>
+
+        <!-- headingOptions -->
+
+        <select id="formatBlock" class="adv-option-button">
+          <option value="H1">H1</option>
+          <option value="H2">H2</option>
+          <option value="H3">H3</option>
+          <option value="H4">H4</option>
+          <option value="H5">H5</option>
+          <option value="H6">H6</option>
+        </select>
+
+        <!-- fontOptions  -->
+
+        <select id="font-name" class="adv-option-button"></select>
+
+        <select id="font-size" class="adv-option-button"></select>
+
+        <!-- colorOptions  -->
+
+        <div class="input-wrapper">
+          <input type="color" id="foreColor" class="adv-option-button" />
+          <label for="foreColor">Font Color</label>
+        </div>
+
+        <!-- <div class="input-wrapper">
+          <input type="color" id="backColor" class="adv-option-button" />
+          <label for="backColor">Hignlight Color</label>
+        </div> -->
       </div>
+      <div id="text-input" contenteditable="true"></div>
     </div>
     <script src="index.js"></script>
   </body>
